Fixed top/ bottom spacing issues

--- a/assets/css/master.sass
+++ b/assets/css/master.sass
@@ -26,7 +26,6 @@ body
   font-family: 'Josefin Sans', sans-serif
   font-size: 1.3em
   margin: 0
-  padding: 2em
 
 h1, h2, h3, h4, h5, h6
   font-weight: 100
@@ -87,6 +86,10 @@ footer
 
 .container
   margin: auto
+  &>*:first-child.bump
+    padding-top: 2em
+  &>*:last-child
+    padding-bottom: 2em
   &.flex
     align-items: normal
     display: flex
